# a2a

./: README.md  client.py  pyproject.toml  requirements.txt
debate_ai/: __init__.py
debate_ai/src/: config.py  main.py
debate_ai/src/agents/: __init__.py  evidence.py  judge.py  moderator.py  research.py  utils.py
debate_ai/src/agents/debate/: against_opening.py  against_rebuttal_agent.py  pro_opening.py  pro_rebuttal_agent.py
debate_ai/src/graph/: __init__.py  workflow.py
debate_ai/src/models/: __init__.py  state.py
debate_ai/src/services/: __init__.py  llm.py
debate_ai/src/tools/: __init__.py  web_search.py
server/: test_debate.py
server/src/: main.py
server/src/core/: __init__.py  config.py  exceptions.py  handlers.py  lifespan.py
server/src/middleware/: __init__.py  logging.py
server/src/schemas/: __init__.py  common.py  debate.py
server/src/services/: __init__.py  debate_service.py  llm_factory.py
server/src/v1/: __init__.py  debate.py  health.py
tests/: test_debate_api.py
